--- a/About.html
+++ b/About.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -59,7 +60,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li><li class="nav-item"><a class="nav-link link" href="https://www.entrepreneur.com/article/244808" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li><li class="nav-item"><a class="nav-link link" href="https://twitter.com/Sling_Websites" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -72,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -215,7 +216,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="cOa0tZZqZtCR31lEnylVDze0wSOoy/ey/K7N1w/bO4rLq1z/2mVNMsyTh0oY6Zi+tjn1akdon82RGn0xrZ63qx/EwP4Sgh6Xx+TuFfqodC/pGHpQmPgDLiUKFmiLD29N" data-form-email="true">
+                        <input type="hidden" value="KAGqwPeLK2Vtp5DAaErfjY13CXxo4ZadpCAWQtfVubtP2VLJR9mUvqELaIXCn/+n9CPizYcj5Z/7VhFCmriXwGp7zq3YazIKMmdsvHWvxaW6EqpP+gsksnd4d4fjR5+x" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
