--- a/Services.html
+++ b/Services.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -59,7 +60,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li><li class="nav-item"><a class="nav-link link" href="https://www.entrepreneur.com/article/244808" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li><li class="nav-item"><a class="nav-link link" href="https://twitter.com/Sling_Websites" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -72,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -278,7 +279,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="x/1HbZAWn1GU5dWB3Kb8Y4sv0l4RQu9ZnRLBnoG+tr77lbuqdETmVL8DhWoU+HpEdwjUTzoFWgKtu+c7i/LwmTb1XiMc5P2KspQJJ2shQeaAE1H2wx3rWs+aQQ/HamI5" data-form-email="true">
+                        <input type="hidden" value="0UnMNRSd/fvV55V2SnNmgLl6wkjLy5i35/Yy+1zzp5CAVvSIXQ5f+3uqkiHZiBRG1SxYUSDVb1Lz+2p8y5+bNEMCMWeXT8KGG9u+2YpdKwsME2BrWp1oKoVl/yDqqfbk" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
