--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -256,7 +256,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="tlR6TwvRWHWwUpDzJGPF2a+Ih25DKJr1Opl7Hj4iIjNtH2WaHJiyHYQorXsDA56fyEE7QiSOpz8/qvO75cOsCckP6aAzgzI/je45n1dVNhGVVQnDjrN8dONR3Q+PWsDN" data-form-email="true">
+                        <input type="hidden" value="3tsfjeuzqnTL8P+cHyuvfroSkvcmqHK4YnLvgcSGbxOpWp6PKjCi2CcfXIksKbrU3xH7xt+487kS0z6G/YPA5IJ2JIN1PGg6ujgyRYzB6OoBytyJzOyL44j2Q5AJKaZC" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
