--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li><li class="nav-item"><a class="nav-link link" href="https://www.entrepreneur.com/article/244808" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li><li class="nav-item"><a class="nav-link link" href="https://twitter.com/Sling_Websites" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page6.html#msg-box5-1x" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT</a><div class="dropdown-menu"><a class="dropdown-item" href="page6.html#msg-box5-1w">The Problem Discovery</a><a class="dropdown-item" href="page6.html#msg-box5-1x">Why "Sling"?&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link" href="page5.html#msg-box8-1o">PORTFOLIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page7.html#msg-box2-22" data-toggle="dropdown-submenu" aria-expanded="false">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html#features1-24">Website Design &amp; Development</a><a class="dropdown-item" href="page7.html#msg-box3-25">Graphic Design</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-2l">CONTACT</a></li><li class="nav-item"><a class="nav-link link" href="https://www.facebook.com/SlingWebsites/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li><li class="nav-item"><a class="nav-link link" href="https://twitter.com/Sling_Websites" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn" style="color: rgb(184, 49, 47);"></span></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -77,7 +77,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -256,7 +256,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="3tsfjeuzqnTL8P+cHyuvfroSkvcmqHK4YnLvgcSGbxOpWp6PKjCi2CcfXIksKbrU3xH7xt+487kS0z6G/YPA5IJ2JIN1PGg6ujgyRYzB6OoBytyJzOyL44j2Q5AJKaZC" data-form-email="true">
+                        <input type="hidden" value="5e8E5fdG0smETz4MrCapwzkodTHpx43OmJ1TGPNtWRyQ9XAqnrpaUc9lNl4b0cO0mkfpNlox77gK0fM7gQAxPxqyUAw0Th5vqohmL15nPIgt93GcGVad1LxEAcg+1cSG" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
